# Acaena-remote-adb-devices

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build-release.yml
app/: config.py
app/api/: routes.py  websocket.py
app/core/: adb_manager.py  device_registry.py  port_allocator.py  scrcpy_session.py
app/models/: device.py
static/js/: device_client.js  input.js  video_parser.js
templates/: device.html  index.html
